# icom-706-prog

./: .gitignore  README.md  pyproject.toml  wia_2m.csv
src/: main.py
